# academic-mcp

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  domain_misclassification_report.txt  fix_domain_classification.py  migrate_chunk_embeddings.py  migrate_domain_embeddings.py  pyproject.toml  reextract_metadata.py  reindex_all.py  requirements.txt  start_server.sh  stop_server.sh  test_setup.py  zotero_import.py
src/: __init__.py  config.py  server.py
src/models/: __init__.py  database.py  vectors.py
src/processing/: __init__.py  chunker.py  domain_classifier.py  extractor.py  keyword_extractor.py  pdf_processor.py  section_detector.py
src/utils/: __init__.py  ollama_utils.py
src/zotero/: __init__.py  models.py  reader.py  sync.py
